Added little o, little omega and space complexity

--- a/Design_and_Analysis_Of_Algorithms.ipynb
+++ b/Design_and_Analysis_Of_Algorithms.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "7c0da316",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "36423d3e",
    "metadata": {},
    "outputs": [
@@ -142,9 +142,218 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d713fca7",
+   "metadata": {},
+   "source": [
+    "### Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18d22e49",
+   "metadata": {},
+   "source": [
+    "There are 2 types of analysis:  \n",
+    "1. Priory: done before executing the code, is hardware independent\n",
+    "2. Posterior: done after execting the code, is hardware dependent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aae23b3f",
+   "metadata": {},
+   "source": [
+    "Time and Space Complexity Analysis comes under Priory analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "239e3db2",
+   "metadata": {},
+   "source": [
+    "### Asymptotic Notations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8167e4e",
+   "metadata": {},
+   "source": [
+    "For the representation of priory analysis we use mathematical notations called Asymptotic notations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8ec12ff",
+   "metadata": {},
+   "source": [
+    "#### 1. Big O notation (denoted by O) - Worst case complexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b81017cd",
+   "metadata": {},
+   "source": [
+    "<pre>Represents the <b>upper bound</b> for the time/space complexity of an algorithm. \n",
+    "  \n",
+    "Mathematical Representation:  \n",
+    "  <b>f(n) = O(g(n))</b>\n",
+    "  where,  \n",
+    "      O(g(n)) = {f(n) : there exists positive constans c & n' such that  <b>0 <= f(n) <= c.g(n)</b>  for all n>=n'}\n",
+    "      \n",
+    "In other words,\n",
+    "  for any value of n, the running time of an algorithm does not cross the time provided by O(g(n))</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "212cf69f",
+   "metadata": {},
+   "source": [
+    "#### 2. Big Omega notation (denoted by Ω) - Best case complexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd83b758",
+   "metadata": {},
+   "source": [
+    "<pre>Represents the <b>lower bound</b> for the time/space complexity of an algorithm.  \n",
+    "  \n",
+    "Mathematical Representation:  \n",
+    "  <b>f(n) = Ω(g(n))</b>\n",
+    "  where,  \n",
+    "      Ω(g(n)) = {f(n) : there exists positive constans c & n' such that  <b>0 <= c.g(n) <= f(n)</b>  for all n>=n'}\n",
+    "      \n",
+    "In other words,\n",
+    "  for any value of n, the minimum running time of an algorithm is given by Ω(g(n))</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6a0a63c",
+   "metadata": {},
+   "source": [
+    "#### 3. Big Theeta notation (denoted by θ) - Average case complexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c2d0262",
+   "metadata": {},
+   "source": [
+    "<pre>Represents the <b>upper and lower bound</b> for the time/space complexity of an algorithm.  \n",
+    "  \n",
+    "Mathematical Representation:  \n",
+    "  <b>f(n) = θ(g(n))</b>\n",
+    "  where,  \n",
+    "      θ(g(n)) = {f(n) : there exists positive constans c1, c2 & n' such that  <b>0 <= c1.g(n) <= f(n) <= c2.g(n)</b>\n",
+    "                 for all n>=n'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de75c58e",
+   "metadata": {},
+   "source": [
+    "### Asymptotically Tight Bound"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "442744a5",
+   "metadata": {},
+   "source": [
+    "If a function f(n) lies anywhere in between c1.g(n) and c2.g(n) for all n>=n', then f(n) is said to be asymptotically tight bound. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ab2e215",
+   "metadata": {},
+   "source": [
+    "#### 4. Little o notation (denoted by o)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b6e9369",
+   "metadata": {},
+   "source": [
+    "<pre>Represents the <b>asymptotic upper bound</b> for the time/space complexity of an algorithm. \n",
+    "  \n",
+    "Mathematical Representation:  \n",
+    "  <b>f(n) = o(g(n))</b>\n",
+    "  where,  \n",
+    "      o(g(n)) = {f(n) : there exists positive constans c & n' such that  <b>0 <= f(n) < c.g(n)</b>  for all n>=n'}\n",
+    "      \n",
+    "In other words,\n",
+    "  for any value of n, the running time of an algorithm is strictly less than the time provided by O(g(n))</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a72f0556",
+   "metadata": {},
+   "source": [
+    "#### 5. Little Omega notation (denoted by ω)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb1162df",
+   "metadata": {},
+   "source": [
+    "<pre>Represents the <b>asymptotic lower bound</b> for the time/space complexity of an algorithm.  \n",
+    "  \n",
+    "Mathematical Representation:  \n",
+    "  <b>f(n) =  ω(g(n))</b>\n",
+    "  where,  \n",
+    "       ω(g(n)) = {f(n) : there exists positive constans c & n' such that  <b>0 <= c.g(n) < f(n)</b>  for all n>=n'}\n",
+    "      \n",
+    "In other words,\n",
+    "  for any value of n, the minimum running time of an algorithm is strictly greater than the time given by ω(g(n))</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "966f735d",
+   "metadata": {},
+   "source": [
+    "## -----------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85317b92",
+   "metadata": {},
+   "source": [
+    "## Space Complexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eab129f6",
+   "metadata": {},
+   "source": [
+    "<b>Its the mathematical function that tells us how the space taken by an algorithm is growing to grow as the input grows.</b>  \n",
+    "It includes both <b>Auxiliary space + space used by input</b>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "135c1037",
+   "metadata": {},
+   "source": [
+    "<b>Auxiliary Space</b> is the extra space or temporary space used by an algorithm.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8076222",
+   "id": "afe23a1c",
    "metadata": {},
    "outputs": [],
    "source": []
