--- a/Theory/Design_and_Analysis_Of_Algorithms.ipynb
+++ b/Theory/Design_and_Analysis_Of_Algorithms.ipynb
@@ -13,7 +13,7 @@
    "id": "0740711e",
    "metadata": {},
    "source": [
-    "Algorithm: Linear Search for a target that does not exist in array.\n",
+    "Lets take an example of an algorithm of Linear Search for a target that does not exist in array.\n",
     "\n",
     "Say,  \n",
     "   Execution Time for old system = 10 sec  \n",
@@ -24,19 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7c0da316",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Same"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "print(\"Ans.\", end=\" \")\n",
     "assert [print(chr(i), end=\"\") for i in [83, 97, 109, 101]]"
    ]
   },
@@ -60,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "36423d3e",
    "metadata": {},
    "outputs": [
@@ -192,6 +185,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "608ae718",
+   "metadata": {},
+   "source": [
+    "<img src=\"Images/bigO_plot.webp\" width=\"500\" height=\"340\">"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b81017cd",
    "metadata": {},
@@ -217,6 +219,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "593e3db6",
+   "metadata": {},
+   "source": [
+    "<img src=\"Images/bigOmega_plot.webp\" width=\"500\" height=\"340\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dd83b758",
    "metadata": {},
    "source": [
@@ -237,6 +247,14 @@
    "metadata": {},
    "source": [
     "#### 3. Big Theeta notation (denoted by θ) - Average case complexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "771af97a",
+   "metadata": {},
+   "source": [
+    "<img src=\"Images/theta_plot.webp\" width=\"500\" height=\"340\">"
    ]
   },
   {
@@ -274,7 +292,7 @@
    "id": "6ab2e215",
    "metadata": {},
    "source": [
-    "#### 4. Little o notation (denoted by o)"
+    "#### 4. Little o notation (denoted by o) "
    ]
   },
   {
@@ -351,9 +369,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5161546",
+   "metadata": {},
+   "source": [
+    "<pre>Calculate the time complexity for the following algorithm:\n",
+    "\n",
+    "for(i=1; i<=N; i+k){\n",
+    "  for(j=1; j<=k; j++){\n",
+    "    //some operations\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6d7ab617",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ans. O(n)\n"
+     ]
+    }
+   ],
+   "source": [
+    "assert [print(f'Ans. O({chr(i)})') for i in [110]]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "dc2aaefb",
+   "metadata": {},
+   "source": [
+    "<img src=\"Images/Time_Complexity_Of_Sorting_Algos.png\" width=\"750\" height=\"510\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d61f934",
+   "metadata": {},
+   "source": [
+    "## Complexity Analysis of Recursive Programs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afe23a1c",
+   "id": "d240cd38",
    "metadata": {},
    "outputs": [],
    "source": []
